css/style.css
body{
	background-color: white;
}

/*div#main*/
#main-doc{
	margin-left: 200px;
	padding:20px;
}

/*indent content a little*/
p,li{
	margin-left: 20px;
}



/*format code nice and pretty*/
code{
	margin-left: 50px;
	background-color: #303030;
	color: white;
	width:80%;
	height:2em;
	display:inline-block;
	padding:2em;
}
/*and spans*/
.math{
	color: #50BFE6;
}
.put{
	color:#FF355E;
}
.answer{
	color: #66FF66;
}
.run{
	color: #FF6EFF;
}
.function{
	color:#CCFF00;
}
.param{
	color:#FF9933;
}
.username{
	color: gainsboro;
}
.status{
	color:#FD5B78;
}
.enlightened{
	color: #FFFF66;
}








/*nav #navbar */
#navbar{
	position: fixed;
	left:0;
	top:0;
	background-color: gainsboro;
	width: 200px;
	height: 100%;
	border-right: solid black .25em;
}

h2{
	height:15%;
	margin-top: 10%;
	margin-bottom: 5%;
	text-align: center;
}

/*nabar links #links*/
#links{
	text-align: center;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	height:60%;
	margin-bottom: 10%;
	overflow: scroll;
}
a{
	padding-top:5%;
	padding-bottom: 5%;
	text-decoration: none;
	color: black;
	height:20%;
	text-align: center;
	justify-content: space-between;
	vertical-align: middle;
}
#links :hover{
	background-color: #C8C8C8;
}



/*hide jump*/
#jump{
	display: none;
}

/*small display settings*/
@media (max-width: 500px) {
	#main-doc{
		margin: 0 auto;
		padding-top:100px;
		padding-right:20%;
	}

	h2{
		width:100%;
		height:40%;
		margin: 0 auto;
	}
	#navbar{
		position: absolute;
		top:0;
		margin: 0 auto;
		height:100px;
		width:100%;
		margin-bottom:0%;
		border-right:none;
		z-index: 2;
	}
	#links{
		text-align: center;
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		height:50%;
		margin:0 auto;
		overflow: scroll;
		padding-right: 1%;
		padding-left:1%;
	}
	#jump{
		display: inline-block;
		position: fixed;
		top:0;
		right:0;
		height: 100px;
		width: 10%;
		z-index: 1;
		background-color: white;
		text-align:center;
	}
}

